--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width">
     <title>Sai Hemanth Bheemreddy</title>
     
     <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css">
@@ -18,11 +18,10 @@
           <span class="mdc-top-app-bar__title">Sai Hemanth Bheemreddy</span>
         </section>
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
-          <span class="mdc-top-app-bar__action-item">Projects</span>
-          <span class="mdc-top-app-bar__action-item">Skills</span>
-          <span class="mdc-top-app-bar__action-item">About</span>
-          <span class="mdc-top-app-bar__action-item">Contact</span>
-
+          <a class="mdc-top-app-bar__action-item" href="#projects">Projects</a>
+          <a class="mdc-top-app-bar__action-item" href="#skills">Skills</a>
+          <a class="mdc-top-app-bar__action-item" href="#about">About</a>
+          <a class="mdc-top-app-bar__action-item" href="#contact">Contact</a>
         </section>
       </div>
     </header>
@@ -34,6 +33,48 @@
       </div>
     </div>
 
+    <div class="container projects-div" id="projects">
+      <h3 class="mdc-typography--headline3">Projects</h3>
+      <hr>
+      <div class="projects-list">
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner" id="projects-list">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <div class="mdc-card project-cell mdc-elevation--z4">
+                <div class="project-title">Sputify</div>
+                <div class="project-desc">
+                  A simple online music player made using ReactJS (frontend) and Django (backend)
+                </div>
+                <div class="project-info">
+                  <span class="project-lang">
+                    <span class="project-lang-color" style="background-color: #3572A5"></span>
+                    <span class="project-lang-name">Python</span>
+                  </span>
+                  <a href="" class="project-stars">
+                    <svg aria-label="stars" class="project-star" viewBox="0 0 14 16" version="1.1" width="14" height="16" role="img"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path></svg>
+                    3
+                  </a>
+                  <a href="" class="project-forks">
+                    <svg aria-label="fork" class="project-fork" viewBox="0 0 10 16" version="1.1" width="10" height="16" role="img"><path fill-rule="evenodd" d="M8 1a1.993 1.993 0 00-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 002 1a1.993 1.993 0 00-1 3.72V6.5l3 3v1.78A1.993 1.993 0 005 15a1.993 1.993 0 001-3.72V9.5l3-3V4.72A1.993 1.993 0 008 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"></path></svg>
+                    1
+                  </a>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="container flex">
+        <div class="footer__section-end">
+          <span class="copyright">&copy; All Rights Reserved</span>
+        </div>
+      </div>
+    </footer>
     <script src="js/mdc-init.js"></script>
     <script src="js/app.js"></script>
   </body>
