--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="projects-link-container">
-        <button class="mdc-button mdc-button--outlined mdc-theme--secondary projects-link">
+        <button class="mdc-button mdc-button--outlined mdc-theme--secondary projects-link" onclick="location.href='https://github.com/SaihemanthBR/'">
           <div class="mdc-button__ripple"></div>
           <i class="sf-symbols arrow-up-right" aria-hidden="true"></i>
           <span class="mdc-button__label">Open My GitHub</span>
