Added Skills and Contact

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </div>
     </div>
 
-    <div class="container projects-div" id="projects">
-      <h3 class="mdc-typography--headline4">Projects</h3>
+    <div class="container projects-container" id="projects">
+      <h4 class="mdc-typography--headline4">Projects</h4>
       <hr>
       <div class="projects-list">
         <div class="mdc-layout-grid">
@@ -60,11 +60,102 @@
         </div>
       </div>
       <div class="projects-link-container">
-        <button class="mdc-button mdc-button--outlined mdc-theme--secondary projects-link" onclick="location.href='https://github.com/SaihemanthBR/'">
+        <button class="mdc-button mdc-button--outlined mdc-theme--secondary projects-link" 
+          onclick="location.href='https://github.com/SaihemanthBR/'">
           <div class="mdc-button__ripple"></div>
           <i class="sf-symbols arrow-up-right" aria-hidden="true"></i>
           <span class="mdc-button__label">Open My GitHub</span>
         </button>
+      </div>
+    </div>
+
+    <div class="container skills-container" id="skills">
+      <h4 class="mdc-typography--headline4">Skills</h4>
+      <hr>
+      <div class="skills-list">
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <div class="mdc-card skills-card mdc-elevation--z4">
+                <span class=" skills-title">Languages</span>
+                <ul class="skills-ulist">
+                  <li>Python</li>
+                  <li>Swift</li>
+                  <li>C</li>
+                  <li>Java</li>
+                  <li>8086 Assembly Language</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>PHP</li>
+                </ul>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <div class="mdc-card skills-card mdc-elevation--z4">
+                <span class=" skills-title">Tools, IDEs</span>
+                <ul class="skills-ulist">
+                  <li>XCode</li>
+                  <li>Android Studio</li>
+                  <li>MySQL</li>
+                  <li>Oracle Database</li>
+                  <li>MongoDB</li>
+                  <li>Docker</li>
+                  <li>Figma</li>
+                  <li>Postman</li>
+                  <li>Cocoapods</li>
+                </ul>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <div class="mdc-card skills-card mdc-elevation--z4">
+                <span class=" skills-title">Industry Knowledge</span>
+                <ul class="skills-ulist">
+                  <li>Machine Learning</li>
+                  <li>iOS and MacOS Development</li>
+                  <li>Android Development</li>
+                  <li>Web App Development</li>
+                </ul>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <div class="mdc-card skills-card mdc-elevation--z4">
+                <span class=" skills-title">Frameworks</span>
+                <ul class="skills-ulist">
+                  <li>Node.js</li>
+                  <li>React</li>
+                  <li>Django</li>
+                  <li>Flask</li>
+                  <li>Vapor (Server-Side Swift)</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container contact-container" id="contact">
+      <h4 class="mdc-typography--headline4">Contact Me</h4>
+      <hr>
+      <div class="contact-wrapper">
+        <div class="contact-info">
+          <button class="mdc-icon-button contact-button" onclick="location.href='mailto:sh.bheemreddy@gmail.com'">
+            <i class="sf-symbols envelope-fill"></i>
+          </button>
+          <button class="mdc-icon-button contact-button">
+            <img src="images/twitter-mark.png" width="48px" srcset="images/twitter-mark.svg" onclick="location.href='https://twitter.com/BSaiHemanth'">
+          </button>
+          <button class="mdc-icon-button contact-button">
+            <img src="images/github-mark.png" width="48px" srcset="images/github-mark.svg" onclick="location.href='https://github.com/SaiHemanthBR'">
+          </button>
+          <button class="mdc-icon-button contact-button">
+            <img src="images/linkedin-mark.png" width="48px" srcset="images/linkedin-mark.svg" onclick="location.href='https://www.linkedin.com/in/sai-hemanth-bheemreddy-7842b1166/'">
+          </button>
+          <button class="mdc-icon-button contact-button">
+            <img src="images/instagram-mark.png" width="48px" srcset="images/instagram-mark.svg" onclick="location.href='https://www.instagram.com/saihemanthbr/'">
+          </button>
+        </div>
       </div>
     </div>
 
