Added some formatting

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
           <span class="mdc-top-app-bar__title">Sai Hemanth Bheemreddy</span>
         </section>
-        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end nav-menu">
           <a class="mdc-top-app-bar__action-item" href="#projects">Projects</a>
           <a class="mdc-top-app-bar__action-item" href="#skills">Skills</a>
           <a class="mdc-top-app-bar__action-item" href="#about">About</a>
@@ -75,7 +75,7 @@
       <div class="skills-list">
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-mobile">
               <div class="mdc-card skills-card mdc-elevation--z4">
                 <span class=" skills-title">Languages</span>
                 <ul class="skills-ulist">
@@ -91,7 +91,7 @@
                 </ul>
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-mobile">
               <div class="mdc-card skills-card mdc-elevation--z4">
                 <span class=" skills-title">Tools, IDEs</span>
                 <ul class="skills-ulist">
@@ -107,7 +107,7 @@
                 </ul>
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-mobile">
               <div class="mdc-card skills-card mdc-elevation--z4">
                 <span class=" skills-title">Industry Knowledge</span>
                 <ul class="skills-ulist">
@@ -118,7 +118,7 @@
                 </ul>
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-mobile">
               <div class="mdc-card skills-card mdc-elevation--z4">
                 <span class=" skills-title">Frameworks</span>
                 <ul class="skills-ulist">
@@ -149,6 +149,7 @@
           <button class="mdc-icon-button contact-button">
             <img src="images/github-mark.png" width="48px" srcset="images/github-mark.svg" onclick="location.href='https://github.com/SaiHemanthBR'">
           </button>
+          <br>
           <button class="mdc-icon-button contact-button">
             <img src="images/linkedin-mark.png" width="48px" srcset="images/linkedin-mark.svg" onclick="location.href='https://www.linkedin.com/in/sai-hemanth-bheemreddy-7842b1166/'">
           </button>
