Shows all projects

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                   <li>React</li>
                   <li>Django</li>
                   <li>Flask</li>
-                  <li>Vapor (Server-Side Swift)</li>
+                  <li>Vapor</li>
+                  <li>Firebase</li>
                 </ul>
               </div>
             </div>
