--- a/index.html
+++ b/index.html
@@ -136,6 +136,41 @@
       </div>
     </div>
 
+    <div class="container about-container" id="about">
+      <h4 class="mdc-typography--headline4">About</h4>
+      <hr>
+      <div class="mdc-card about-card mdc-elevation--z24">
+        <div class="about-terminal">
+          <div class="about-terminal-header">saihemanth - aboutme</div>
+          <div class="about-terminal-body">
+            <dl>
+              <dd>Hemanth.origin</dd>
+              <dt>"Hyderabad, Telangana, India"</dt>
+              <dd>Hemanth.education</dd>
+              <dt>{ <br>
+                  &nbsp;&nbsp;"institute": "CVR College of Engineering", <br>
+                  &nbsp;&nbsp;"major": "Computer Science and Engineering (CSE)", <br>
+                  &nbsp;&nbsp;"expectedGraduation": "May 2021" <br>
+                }
+              </dt>
+              <dd>Hemanth.dob</dd>
+              <dt>15/07/1999</dt>
+              <dd>Hemanth.languages</dd>
+              <dt>["English","Telugu", "Hindi"]</dt>
+              <dd>Hemanth.interests</dd>
+              <dt>["Coding", "Cycling", "Music", "Reading Books"]</dt>
+              <dd>Hemanth.strengths</dd>
+              <dt>["I Never Give Up", "Autodidact", "Quick Learner"]</dt>
+              <!-- <dd>Hemanth.resume</dd>
+              <dt><a href="resume.pdf">résumé.pdf</a></dt> -->
+              <dd>Hemanth.contact.email</dd>
+              <dt><a href="mailto:sh.bheemreddy@gmail.com">sh.bheemreddy@gmail.com</a></dt>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="container contact-container" id="contact">
       <h4 class="mdc-typography--headline4">Contact Me</h4>
       <hr>
