--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <dt>{ <br>
                   &nbsp;&nbsp;"institute": "CVR College of Engineering", <br>
                   &nbsp;&nbsp;"major": "Computer Science and Engineering (CSE)", <br>
-                  &nbsp;&nbsp;"expectedGraduation": "May 2021" <br>
+                  &nbsp;&nbsp;"graduation": "In 2021 (Exp.)" <br>
                 }
               </dt>
               <dd>Hemanth.dob</dd>
@@ -161,8 +161,8 @@
               <dt>["Coding", "Cycling", "Music", "Reading Books"]</dt>
               <dd>Hemanth.strengths</dd>
               <dt>["I Never Give Up", "Autodidact", "Quick Learner"]</dt>
-              <!-- <dd>Hemanth.resume</dd>
-              <dt><a href="resume.pdf">résumé.pdf</a></dt> -->
+              <dd>Hemanth.resume</dd>
+              <dt><a href="resume.pdf">résumé.pdf</a></dt>
               <dd>Hemanth.contact.email</dd>
               <dt><a href="mailto:sh.bheemreddy@gmail.com">sh.bheemreddy@gmail.com</a></dt>
             </dl>
