--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <dd>Hemanth.strengths</dd>
               <dt>["I Never Give Up", "Autodidact", "Quick Learner"]</dt>
               <dd>Hemanth.resume</dd>
-              <dt><a href="resume.pdf">résumé.pdf</a></dt>
+              <dt><a href="files/Resume.pdf">résumé.pdf</a></dt>
               <dd>Hemanth.contact.email</dd>
               <dt><a href="mailto:sh.bheemreddy@gmail.com">sh.bheemreddy@gmail.com</a></dt>
             </dl>
