Added meta tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="apple-mobile-web-app-title" content="Twitter">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
 
+    <meta property="og:site_name" content="saihemanthbr.github.com">
+    <meta property="og:title" content="Sai Hemanth Bheemreddy" />
+    <meta property="og:description" content="Personal Website" />
+    <meta property="og:image" itemprop="image" content="images/favicon/apple-safari-512x512.png">
+    <meta property="og:type" content="website" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="shortcut icon" type="image/png" href="images/favicon/apple-safari-512x512.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
