--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="container projects-container" id="projects">
-      <h4 class="mdc-typography--headline4">Projects</h4>
+      <h4 class="mdc-typography--headline4">Projects / Repos</h4>
       <hr>
       <div class="projects-list">
         <div class="mdc-layout-grid">
@@ -85,31 +85,34 @@
               <div class="mdc-card skills-card mdc-elevation--z4">
                 <span class=" skills-title">Languages</span>
                 <ul class="skills-ulist">
+                  <li>C</li>
+                  <li>C++</li>
                   <li>Python</li>
                   <li>Swift</li>
-                  <li>C</li>
                   <li>Java</li>
-                  <li>8086 Assembly Language</li>
+                  <li>JavaScript</li>
+                  <!-- <li>8086 Assembly Language</li> -->
                   <li>HTML</li>
                   <li>CSS</li>
-                  <li>JavaScript</li>
-                  <li>PHP</li>
+                  <!-- <li>PHP</li> -->
                 </ul>
               </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-mobile">
               <div class="mdc-card skills-card mdc-elevation--z4">
-                <span class=" skills-title">Tools, IDEs</span>
+                <span class=" skills-title">Tools, Databases, Technologies</span>
                 <ul class="skills-ulist">
-                  <li>XCode</li>
+                  <li>Xcode</li>
                   <li>Android Studio</li>
                   <li>MySQL</li>
                   <li>Oracle Database</li>
                   <li>MongoDB</li>
                   <li>Docker</li>
-                  <li>Figma</li>
-                  <li>Postman</li>
-                  <li>Cocoapods</li>
+                  <!-- <li>Figma</li> -->
+                  <!-- <li>Postman</li> -->
+                  <!-- <li>Cocoapods</li> -->
+                  <li>Jupyter Notebook</li>
+                  <li>Firebase</li>
                 </ul>
               </div>
             </div>
@@ -117,10 +120,10 @@
               <div class="mdc-card skills-card mdc-elevation--z4">
                 <span class=" skills-title">Industry Knowledge</span>
                 <ul class="skills-ulist">
-                  <li>Machine Learning</li>
-                  <li>iOS and MacOS Development</li>
-                  <li>Android Development</li>
-                  <li>Web App Development</li>
+                  <!-- <li>Machine Learning</li> -->
+                  <li>iOS and macOS development</li>
+                  <li>Android development</li>
+                  <li>Web app development</li>
                 </ul>
               </div>
             </div>
@@ -132,8 +135,8 @@
                   <li>React</li>
                   <li>Django</li>
                   <li>Flask</li>
-                  <li>Vapor</li>
-                  <li>Firebase</li>
+                  <!-- <li>Vapor</li> -->
+                  
                 </ul>
               </div>
             </div>
